fix overlap

--- a/root/css/styleMain.css
+++ b/root/css/styleMain.css
@@ -62,7 +62,7 @@ canvas {
   padding-top: 10%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: larger;
-  margin-top: 50pt;
+  margin-top: 60pt;
   padding: 15px;
 
 }
